--- a/prod/templates/predict.html
+++ b/prod/templates/predict.html
@@ -54,7 +54,7 @@ function subm() {
         <button type="button" onclick="subm();" class="btn btn-primary btn-sm float-right">Submit</button>
 
         <div class="form-group">
-          <label class="col-form-label col-form-label-sm" for="model">model</label>
+          <label class="col-form-label col-form-label-sm" for="model">Model name</label>
           <select class="form-control form-control-sm col-4" id="model">
             {% for model in models -%}
             <option>{{ model }}</option>
